# distributions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/worflows/: test.yml
.github/workflows/: ci.yml  post-release.yml  publish.yml  test.yml
distributions/: __init__.py  asymmetriclaplace.py  bernoulli.py  beta.py  betabinomial.py  betascaled.py  binomial.py  categorical.py  cauchy.py  censored.py  chisquared.py  dirichlet.py  dirichletmultinomial.py  discreteuniform.py  discreteweibull.py  exgaussian.py  exponential.py  gamma.py  geometric.py  gumbel.py  halfcauchy.py  halfnormal.py  halfstudentt.py  helper.py  hypergeometric.py  inversegamma.py  kumaraswamy.py  laplace.py  logistic.py  logitnormal.py  loglogistic.py  lognormal.py  moyal.py  mvnormal.py  mvstudentt.py  negativebinomial.py  normal.py  optimization.py  pareto.py  poisson.py  (+15 more)
pytensor_distributions/: __init__.py  asymmetriclaplace.py  bernoulli.py  beta.py  betabinomial.py  betascaled.py  binomial.py  categorical.py  cauchy.py  chisquared.py  dirichlet.py  dirichletmultinomial.py  discreteuniform.py  discreteweibull.py  exgaussian.py  exponential.py  gamma.py  geometric.py  gumbel.py  halfcauchy.py  halfnormal.py  halfstudentt.py  helper.py  hypergeometric.py  inversegamma.py  kumaraswamy.py  laplace.py  logistic.py  logitnormal.py  loglogistic.py  lognormal.py  matrixnormal.py  moyal.py  multinomial.py  mvnormal.py  mvstudentt.py  negativebinomial.py  normal.py  optimization.py  pareto.py  (+15 more)
src/: __init__.py  distributions.py  normal.py
tests/: helper_consistency.py  helper_empirical.py  helper_scipy.py  test_asymmetriclaplace.py  test_bernoulli.py  test_beta.py  test_betabinomial.py  test_betascaled.py  test_binomial.py  test_categorical.py  test_cauchy.py  test_censored.py  test_chisquared.py  test_dirichlet.py  test_dirichletmultinomial.py  test_discreteuniform.py  test_discreteweibull.py  test_exgaussian.py  test_exponential.py  test_gamma.py  test_geometric.py  test_gumbel.py  test_halfcauchy.py  test_halfnormal.py  test_halfstudentt.py  test_helper.py  test_hypergeometric.py  test_inversegamma.py  test_kumaraswamy.py  test_laplace.py  test_logistic.py  test_logitnormal.py  test_loglogistic.py  test_lognormal.py  test_matrixnormal.py  test_moyal.py  test_multinomial.py  test_mvnormal.py  test_mvstudentt.py  test_negativebinomial.py  (+20 more)
