[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "distributions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "pymc-devs", email = "pymc.devs@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
description = "PyTensor powered distributions."
dependencies = ["numpy>=2.0", "pytensor>=2.32.0"]


[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.flit.module]
name = "distributions"

[project.urls]
source = "https://github.com/pymc-devs/distributions"
tracker = "https://github.com/pymc-devs/distributions/issues"
documentation = "https://distributions.readthedocs.io"
funding = "https://opencollective.com/pymc"


[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--cov=distributions",
    "--cov=tests",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "D",   # pydocstyle
    "NPY", # numpy specific rules
    "UP",  # pyupgrade
    "I",   # isort
    "PL",  # Pylint
    "TID", # Absolute imports
]
ignore = [
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0915", # too many statements
    "PLC0415", # import outside of top level
    "D1",      # Missing docstring
]

[tool.ruff.lint.per-file-ignores]
"docs/source/**/*.ipynb" = ["D", "E", "F", "I", "NPY", "PL", "TID", "UP", "W"]
"distributions/__init__.py" = ["I", "F401", "E402", "F403"]
"distributions/tests/**/*" = ["D", "PLR2004", "TID252"]
"distributions/tests/**/*.ipynb" = ["E", "F"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
docstring-code-format = false
